
          Release Notes for Bacula 1.31

  Bacula code: Total files = 258 Total lines = 76,596 (*.h *.c *.in)

Major Changes this Release:
- Implemented a new job scheduling algorithm with priorities.
- The database format has changed from version 1.30a. Please see below.
- Support to save and restore all files on WinNT/2K/XP systems 
  including the permissions. Unfortunately files that are in use by another
  program cannot be saved.
- Support for Win95 systems (untested since I don't have Win95).
- Heartbeat every 20 minutes between daemons to prevent network
  timeouts. The heartbeat interval can be set.
- Volume names may now only contain letters, numbers, colon, period, dash,
  and underscore.
- Added readline to depkgs (removed from depkgs1) and fixed configuration if
  it is not installed in your system libraries.
- Implemented generalized tape label formats including counter variables 
  for automatic naming of Volumes.
- Multiple simultaneous jobs now work. However, I still don't
  using recommend it.
- Implemented tape block rejection, which means that restores with
  several incremental backups will run orders of magnitude faster.


Other Changes this Release:
- New Priority record in Jobs for setting job priorities.
- The name of Recycle Oldest Volume has now become Purge Oldest Volume.
- Implemented a Recycle Oldest Volume, which respects Retention periods.
- Implemented a Recycle Current Volume, which respects Retention periods.
- Restore checks block numbers to ensure that no block is lost.
- The new console var command allows testing variable expansion
  used in automatic tape name generation.
- The new console estimate command allows you to test FileSets
  to see how many files and bytes will be saved and optionally
  to have an "ls -l" style listing of the files.
- During a normal restore (replace = yes), any existing file is deleted
  and the restored file is then created. This corrects links and other